lox-tests/tests/constructor/default_arguments.stderr
ERROR: Expected 0 arguments in function call but got 3
 --> 4:12
  |
4 | var foo2 = Foo(1, 2, 3); // expect runtime error: Expected 0 arguments but got 3.
  |            ^----------^
