lox-tests/tests/constructor/default_arguments.lox
class Foo {}

var foo1 = Foo();
var foo2 = Foo(1, 2, 3); // expect runtime error: Expected 0 arguments but got 3.
